# Iris-Bot

./: .gitignore  .mt5_research_last_execution.json  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: governance_policy.json
data/runtime/: active_strategy_profiles.json  demo_execution_registry.json  runtime_state.json  strategy_profile_registry.json  strategy_profiles.json
docs/: ARCHITECTURE.md  architecture.md
docs/adr/: 0001-mt5-ownership-policy.md  0002-training-evaluation-contracts.md  0003-durable-io-and-evidence-store-transactionality.md  (+3 more)
scripts/: run_mt5_research_windows.sh
tests/: conftest.py  test_approved_demo_gate_hardened.py  test_backtest.py  test_backtest_engine.py  test_backtest_math.py  test_backtest_metrics.py  test_backtest_reporting.py  test_consistency.py  test_contract_parity.py  test_corrective_premium.py  test_data.py  test_datasets.py  test_demo_execution_phase.py  test_demo_failsafe.py  test_demo_forward_evidence.py  test_demo_live_checklist.py  test_demo_live_probe.py  test_demo_operational_readiness.py  test_demo_readiness.py  test_demo_session_guard.py  test_demo_session_series.py  test_demo_trade_audit.py  test_durable_io.py  test_edge_diagnostics.py  test_engine_constraints.py  test_evidence_store.py  test_exit_lifecycle_realignment.py  test_experiment.py  test_features.py  test_governance_lifecycle.py  test_intrabar_policy.py  test_kill_switch.py  test_label_horizon_realignment.py  test_labels.py  test_logging_utils.py  test_model_artifact_runtime_paths.py  test_mt5.py  test_mt5_order_execution.py  test_mt5_research_runner.py  test_paper_engine.py  (+25 more)
(+124 files in other folders)
