[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-bot"
version = "0.1.0"
description = "Trading bot base con machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["xgboost>=2.0,<3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
