[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-bot"
version = "0.1.0"
description = "Trading bot base con machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost>=3.0",
    "MetaTrader5>=5.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "ruff>=0.12,<0.13",
    "mypy>=1.17,<1.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"src/iris_bot/governance.py" = ["F401"]
"src/iris_bot/main.py" = ["F401"]
"src/iris_bot/paper.py" = ["F401"]
"src/iris_bot/resilient.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = ["src/iris_bot"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
